--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,20 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest-cov>=4.0",
     "black>=23.0",
     "ruff>=0.1.0",
 ]
+test = [
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+]
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+addopts = "-v --cov=src/dsr_feature_eng_ml --cov-report=html --cov-report=term-missing"
 
 [tool.setuptools]
 packages = ["dsr_feature_eng_ml"]
